--- a/scss/lightning.scss
+++ b/scss/lightning.scss
@@ -12,6 +12,10 @@ $lightning-white: #D9D9D9;
 	text-decoration: underline;
 }
 
+.header-highlight{
+ color: $lightning-white;
+}
+
 .section{
 	padding: 0px 0px 30px 0px;
 }
