--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,8 @@
 $bg-grey : #EEE;
+$lightning-blue: #51D0DE;
+$lightning-purple: #BF4AA8;
+$lightning-white: #E9E9E9;
+$lightning-pink: lighten($lightning-purple, 25%);
 
 body{
 	font-size: 110%;
@@ -15,16 +19,14 @@ h3{
 	background: #BBD;
 }
 
-.topic{
-	border-top: 1px solid #BBB;
-	margin-top: 1.0rem;
-	padding-top: 0.5rem;
+.page-title{
+	font-size : 300%;
 }
 
-code.html{
-	border: 1px solid #CCC;
-	background: #EEE;
-	padding: 10px;
+.section-title{
+	font-size : 150%;
+	margin : 30px 0px 0px 0px;
+	text-transform: uppercase;
 }
 
 .daves-media-item{
@@ -34,9 +36,6 @@ code.html{
 }
 
 // sublime cheatcheet formatting
-.entry{
-}
-
 .command{
 	background: #DDD;
 	margin-bottom: 2px; 
@@ -50,23 +49,11 @@ code.html{
 	padding: 2px 15px;
 }
 
-.section-title{
-	font-size : 130%;
-	margin : 20px 0px 4px 0px;
-	text-transform: uppercase;
-}
-
-.page-title{
-	font-size : 250%;
-}
-
 .spacer{
 	margin-bottom: 7px;
 }
-// how-did-i-fix specific formatting
-.problem-area{
-}
 
+// how-did-i-fix specific formatting
 .problem-area-title{
 	font-size: 140%;
 	margin: 20px 0px 5px 0px;
@@ -92,5 +79,11 @@ code.html{
 }
 
 .solution-link{
+}
 
+// checklist stlyes
+.checklist-item{
+	font-size: 110%;
+	font-weight: 500;
+	color: #666;
 }
