--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,30 +3,95 @@ $lightning-blue: #51D0DE;
 $lightning-purple: #BF4AA8;
 $lightning-white: #E9E9E9;
 $lightning-pink: lighten($lightning-purple, 25%);
+$font-stack: 'Roboto', 'Franklin Gothic Medium', Tahoma, sans-serif;
 
 body{
 	font-size: 110%;
 }
 
-h1{
-	margin-top: 2.0rem;
-	background: #668;
-	color: white;
+html, .root {
+  font-size: 16px;
+  line-height: 23px;
 }
 
-h3{
-	margin-top: 1.5rem;
-	background: #BBD;
+body, .article {
+  font-family: $font-stack;
+  font-size: 1em;
+  line-height: 1.4375em;
+}
+
+@mixin h1-mixin {
+  font-family: $font-stack;
+  font-size: 4.25em;
+  line-height: 1.01470588em;
+  margin-top: 0.33823529em;
+  margin-bottom: 0.67647058em;
+}
+
+@mixin h2-mixin {
+  font-size: 2.625em;
+  line-height: 1.0952381em;
+  margin-top: 0.54761905em;
+  margin-bottom: 0.54761905em;
+}
+
+@mixin h3-mixin {
+  font-size: 1.625em;
+  line-height: 1.76923077em;
+  margin-top: 0.88461538em;
+  margin-bottom: 0em;
+}
+
+@mixin h4-mixin {
+  font-family: $font-stack;
+  font-size: 1em;
+  line-height: 1.4375em;
+  margin-top: 1.4375em;
+  margin-bottom: 0em;
+}
+
+@mixin h5-mixin {
+  font-family: $font-stack;
+  font-size: 1em;
+  line-height: 1.4375em;
+  margin-top: 1.4375em;
+  margin-bottom: 0em;
+}
+
+
+/* Let's make sure all's aligned */
+@mixin hr-mixin {
+  border: 1px solid;
+  margin: -1px 0;
+}
+
+sub, sup {
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
 }
 
 .page-title{
-	font-size : 300%;
+	@include h1-mixin;
 }
 
 .section-title{
-	font-size : 150%;
+	@include h2-mixin;
 	margin : 30px 0px 0px 0px;
 	text-transform: uppercase;
+}
+
+.section-title-2{
+	@include h4-mixin;
+	font-weight: 600;
 }
 
 .daves-media-item{
