--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,9 @@ sub {
   margin: 10px 0px 0px 0px;
   padding: 10px; }
 
+.inline {
+  display: inline !important; }
+
 .command {
   background: #DDD;
   margin-bottom: 2px;
@@ -86,3 +89,7 @@ sub {
   font-size: 110%;
   font-weight: 500;
   color: #666; }
+
+.term {
+  font-weight: 600;
+  margin-top: 0.5em; }
