--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -152,9 +152,10 @@ sub {
 
 // checklist stlyes
 .checklist-item{
-	font-size: 110%;
-	font-weight: 500;
-	color: #666;
+	font-size: 120%;
+	font-weight: 700;
+	color: #555;
+  margin-top: 1.5em; 
 }
 
 .term{
