--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i");
 body {
   font-size: 110%; }
 
@@ -8,7 +9,8 @@ html, .root {
 body, .article {
   font-family: "Roboto", "Franklin Gothic Medium", Tahoma, sans-serif;
   font-size: 1em;
-  line-height: 1.4375em; }
+  line-height: 1.4375em;
+  color: #777777; }
 
 /* Let's make sure all's aligned */
 sub, sup {
@@ -27,23 +29,26 @@ sub {
   font-size: 4.25em;
   line-height: 1.01470588em;
   margin-top: 0.33823529em;
-  margin-bottom: 0.67647058em; }
+  margin-bottom: 0.67647058em;
+  color: #222222; }
 
 .section-title {
+  font-family: "Roboto", "Franklin Gothic Medium", Tahoma, sans-serif;
   font-size: 2.625em;
   line-height: 1.0952381em;
   margin-top: 0.54761905em;
   margin-bottom: 0.54761905em;
+  color: #222222;
   margin: 30px 0px 0px 0px;
   text-transform: uppercase; }
 
 .section-title-2 {
   font-family: "Roboto", "Franklin Gothic Medium", Tahoma, sans-serif;
-  font-size: 1em;
-  line-height: 1.4375em;
-  margin-top: 1.4375em;
+  font-size: 1.625em;
+  line-height: 1.2375em;
+  margin-top: 0.88461538em;
   margin-bottom: 0em;
-  font-weight: 600; }
+  color: #222222; }
 
 .daves-media-item {
   background: #EEE;
@@ -70,6 +75,9 @@ sub {
 .problem-area-title {
   font-size: 140%;
   margin: 20px 0px 5px 0px; }
+
+.full-height {
+  height: 100%; }
 
 .problem-description {
   background: #FDD;
