--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,18 @@ body, .article {
   line-height: 1.4375em;
   color: #777777; }
 
+code {
+  display: block;
+  white-space: pre-wrap; }
+
 .container {
   max-width: 960px; }
 
 /* Let's make sure all's aligned */
+.h4 {
+  margin-top: 1.5em;
+  color: #555555; }
+
 sub, sup {
   line-height: 0;
   position: relative;
@@ -30,7 +38,7 @@ sub {
   line-height: 1.01470588em;
   margin-top: 0.33823529em;
   margin-bottom: 0.67647058em;
-  color: #222222;
+  color: #555555;
   margin-bottom: 0px; }
 
 .section-title {
@@ -39,7 +47,7 @@ sub {
   line-height: 1.0952381em;
   margin-top: 0.54761905em;
   margin-bottom: 0.54761905em;
-  color: #222222;
+  color: #555555;
   margin: 30px 0px 0px 0px;
   text-transform: uppercase; }
 
@@ -49,7 +57,7 @@ sub {
   line-height: 1.2375em;
   margin-top: 0.88461538em;
   margin-bottom: 0em;
-  color: #222222; }
+  color: #555555; }
 
 .daves-media-item {
   background: #EEE;
