--- a/css/airbnb.css
+++ b/css/airbnb.css
@@ -15,14 +15,14 @@ body {
   font-family: Circular, -apple-system, "system-ui", Roboto, "Helvetica Neue", sans-serif;
   font-size: 1rem;
   line-height: 1.4375em;
-  color: #454545;
+  color: #717171;
   margin: 50px 50px; }
 
 .article {
   font-family: Circular, -apple-system, "system-ui", Roboto, "Helvetica Neue", sans-serif;
   font-size: 1rem;
   line-height: 1.4375em;
-  color: #454545; }
+  color: #717171; }
 
 script {
   font-family: "Caveat-VariableFont_wght"; }
@@ -33,6 +33,7 @@ script {
 .page-title {
   font-family: "Caveat-VariableFont_wght";
   font-size: 6rem;
+  font-weight: normal;
   line-height: 1.01470588em;
   margin-bottom: 0.67647058em;
   color: #f7585b;
@@ -41,6 +42,7 @@ script {
 .basics-section-title {
   font-family: "Caveat-VariableFont_wght";
   font-size: 2.625rem;
+  font-weight: normal;
   line-height: 1.0952381em;
   margin-top: 0.54761905em;
   margin-bottom: 0.54761905em;
@@ -49,25 +51,42 @@ script {
 
 .basics-sub-heading {
   font-family: "Caveat-VariableFont_wght";
+  font-weight: bold;
   color: #f7585b;
   margin: 30px 0px 0px 0px;
   font-size: 1.3rem;
   font-weight: 700; }
 
 .basics-section-detail {
-  margin: 0px 10px; }
+  margin: 0px 10px;
+  font-weight: bold; }
+
+.label {
+  font-family: "Caveat-VariableFont_wght";
+  font-size: 6rem;
+  font-weight: normal;
+  line-height: 1.01470588em;
+  margin-bottom: 0.67647058em;
+  color: #f7585b;
+  margin: 100px 40px; }
+
+.label-image {
+  height: 200px; }
 
 .bottom {
   margin: 20px;
   height: 300px;
   width: 100%; }
 
-ul {
+.full-width-image {
+  width: 100%; }
+
+ul.basics-list {
   padding: 0px 20px;
   list-style: none;
   /* Remove default bullets */ }
 
-ul li::before {
+ul.basics-list li::before {
   content: "\2022";
   /* Add content: \2022 is the CSS Code/unicode for a bullet */
   color: #f7585b;
