--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,6 +27,10 @@ code {
   white-space: pre-wrap   
 } 
 
+code.inline {
+  display: inline; 
+} 
+
 .container{
   max-width: 960px;
 }
@@ -224,5 +228,11 @@ thead{
 }
 
 .section{
-  margin-top: 2em;
+  margin-top: 1em;
+  padding-bottom: 10px;
+}
+
+.header{
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
