--- a/css/airbnb.css
+++ b/css/airbnb.css
@@ -39,6 +39,16 @@ script {
   color: #f7585b;
   margin-bottom: 0px; }
 
+.cover-title {
+  font-family: "Caveat-VariableFont_wght";
+  font-size: 6rem;
+  font-weight: normal;
+  line-height: 1.01470588em;
+  margin-bottom: 0.67647058em;
+  color: #f7585b;
+  font-size: 12rem;
+  margin-bottom: 0px; }
+
 @media screen and (max-width: 599px) {
   .page-title {
     font-family: "Caveat-VariableFont_wght";
@@ -109,3 +119,24 @@ ul.basics-list li::before {
   /* Also needed for space (tweak if needed) */
   margin-left: -1em;
   /* Also needed for space (tweak if needed) */ }
+
+.useful-link-place {
+  font-family: "Caveat-VariableFont_wght";
+  font-weight: bold;
+  color: #f7585b;
+  font-size: 2rem;
+  font-weight: 700;
+  padding: 0 20px 0 20px;
+  vertical-align: middle; }
+
+.small-image {
+  width: 100px; }
+
+.useful-link-qr-code {
+  width: 100px;
+  height: 100px;
+  margin: 20px 20px 50px 20px; }
+
+.useful-link-url {
+  padding: 0 20px 0 20px;
+  vertical-align: top; }
