--- a/scss/airbnb.scss
+++ b/scss/airbnb.scss
@@ -161,6 +161,12 @@ ul.basics-list li::before {
 
 a{
   color: $airbnb-red;
+  text-decoration:none;
+}
+
+a:hover{
+  text-decoration:none;
+  color:$airbnb-red;
 }
 
 .apartment-content-link{
